add proof link to respones on project, remove positive tags

--- a/public/privacy_policy.html
+++ b/public/privacy_policy.html
@@ -1,6 +1,6 @@
 <style>
 
-</style><div id='ppHeader'>http://aap-tracker-dev.elasticbeanstalk.com/ Privacy Policy</div><div id='ppBody'><div class='ppConsistencies'><div class='col-2'>
+</style><div id='ppHeader'>http://aap-tracker-3je2bj3jdf.elasticbeanstalk.com/ Privacy Policy</div><div id='ppBody'><div class='ppConsistencies'><div class='col-2'>
             <div class="quick-links text-center">Information Collection</div>
         </div><div class='col-2'>
             <div class="quick-links text-center">Information Usage</div>
